# example

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.bat  build.rs  compiler_c.wasm  language_c.wasm  out.wasm  test.py
.cargo/: config.toml
benches/: test.rs
include/: wrapper.h
qml/: main.qml
src/: ctor.rs  ctx.rs  cxxqt_object.rs  lib.rs  main.rs  neu.rs  regex.rs
src/ctor/: extract.rs  sep.rs
src/ctx/: regex.rs  span.rs
src/neu/: times.rs
