[workspace]
resolver = "2"
members = [
    "packages/snippet",
    "packages/snippet-c",
    "packages/snippet-cpp",
]

[workspace.dependencies]
tokio = { version = "1.39", features = ["full"] }
cote = { version = "0.5", features = ["log"] }
color-eyre = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
wasmtime = { version = "23.0" }
wasm-bindgen = { version = "0.2" }
wasmtime-wasi = { version = "23.0" }

[profile.release]
lto = true
codegen-units = 1
