[workspace]
resolver = "2"
members = [
    "packages/snippet",
    "packages/snippet-c",
    "packages/language-c",
    "packages/compiler-c",
    "packages/snippet-cpp",
]

[workspace.dependencies]

wit-bindgen = { version = "0.30" }
wit-deps = { version = "0.3" }
wit-bindgen-rt = { version = "0.30.0", features = [
    "bitflags",
] }
tokio = { version = "1.39", features = ["full"] }
cote = { version = "0.5", features = ["log"] }
color-eyre = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
wasmtime = { version = "24.0" }
wasm-bindgen = { version = "0.2" }
wasmtime-wasi = { version = "24.0" }
wac-graph = "0.5"

[profile.release]
lto = true
codegen-units = 1
